# learn-make

./: .gitignore  Makefile
Makefile/: Makefile  auto_c2o.mk  main.c  x.h
Makefile/a/: a.h.gch
Makefile/b/: b.h.gch
automake/: .gitignore  Makefile  Makefile-f  Makefile.am  auto.sh  build.sh  configure.ac  rm.sh
automake/a/: a.c
automake/b/bb/: bb.c  bb.h
automake/libtt/: Makefile.am  tt.c
automake/suba/: Makefile.am  main.c  x.c
automake/subb/: Makefile.am  main.c
b/: b.c  b.h
earth/: auto.sh  config.h  configure.ac
earth/test/: Makefile.am
earth/test/funtest/: Makefile.am  funtest1.c
outomake/: first.sh
outomake/a/: a.h
