AC_INIT([automake], [1.0], [123@qq.com])
AM_INIT_AUTOMAKE([foreign -Werror])

AC_PREREQ([2.69])

# Checks for programs.
AC_PROG_CC

#AC_PROG_LIBTOOL
AC_PROG_RANLIB
AX_CHECK_DOCBOOK

AC_CONFIG_SRCDIR([subb/main.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile suba/Makefile subb/Makefile libtt/Makefile])

AC_OUTPUT

